Fix #1615 to add xslt-saxon native support

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -248,6 +248,7 @@
         <module>xmlsecurity</module>
         <module>xpath</module>
         <module>xslt</module>
+        <module>xslt-saxon</module>
         <module>zendesk</module>
         <module>zip-deflater</module>
         <module>zipfile</module>
