--- a/integration-tests/box/pom.xml
+++ b/integration-tests/box/pom.xml
@@ -70,7 +70,8 @@
 
 
     <profiles>
-        <profile>
+<!--        Disabled because of https://github.com/apache/camel-quarkus/issues/5160-->
+<!--        <profile>
             <id>native</id>
             <activation>
                 <property>
@@ -97,7 +98,7 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile>-->
         <profile>
             <id>virtualDependencies</id>
             <activation>
