Restore AS2 testing

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -57,7 +57,7 @@
         <module>activemq</module>
         <module>amqp</module>
         <module>arangodb</module>
-        <!--<module>as2</module> https://github.com/apache/camel-quarkus/issues/4492 -->
+        <module>as2</module>
         <module>atlasmap</module>
         <module>avro</module>
         <!--<module>avro-rpc</module>-->
