--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -136,6 +136,10 @@
                         <groupId>commons-logging</groupId>
                         <artifactId>commons-logging</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.bouncycastle</groupId>
+                        <artifactId>bcprov-debug-jdk18on</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
