--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -1578,6 +1578,10 @@
                         <groupId>org.apache.camel</groupId>
                         <artifactId>camel-spring</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-orm</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
