Run docs module build in case Dependabot updates a version property referenced in antora.yml

--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -92,6 +92,7 @@ jobs:
             ./mvnw cq:sync-versions -N ${CQ_MAVEN_ARGS}
             ./mvnw clean install -pl poms/bom -am -Dcq.flatten-bom.format --fail-never ${CQ_MAVEN_ARGS}
             ./mvnw clean install -f poms/bom ${CQ_MAVEN_ARGS}
+            ./mvnw clean validate -pl docs ${CQ_MAVEN_ARGS}
 
             if [[ -z "$(git status --porcelain)" ]]; then
               echo "continue-build=true" >> $GITHUB_OUTPUT
