--- a/integration-tests/grpc/src/main/resources/application.properties
+++ b/integration-tests/grpc/src/main/resources/application.properties
@@ -15,4 +15,4 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-quarkus.native.resources.includes=certs/*.key,certs/*.pem
+quarkus.native.resources.includes=certs/*.key,certs/*.pem,keys/*.json
