Fix #5139 to expand xslt-saxon test coverage

--- a/extensions/xslt-saxon/runtime/pom.xml
+++ b/extensions/xslt-saxon/runtime/pom.xml
@@ -38,7 +38,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-core</artifactId>
+            <artifactId>camel-quarkus-xslt</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
