--- a/extensions/mapstruct/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/mapstruct/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -25,9 +25,8 @@ name: "Camel MapStruct"
 description: "Type Conversion using Mapstruct"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
-  unlisted: true
   guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/mapstruct.html"
   categories:
   - "integration"
   status:
-  - "preview"
+  - "stable"
