--- a/poms/bom-test/pom.xml
+++ b/poms/bom-test/pom.xml
@@ -177,6 +177,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel.quarkus</groupId>
+                <artifactId>camel-quarkus-integration-tests-support-grpc</artifactId>
+                <version>${camel-quarkus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel.quarkus</groupId>
                 <artifactId>camel-quarkus-integration-test-support</artifactId>
                 <version>${camel-quarkus.version}</version>
             </dependency>
