--- a/extensions/grpc/pom.xml
+++ b/extensions/grpc/pom.xml
@@ -31,6 +31,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>codegen</module>
         <module>deployment</module>
         <module>runtime</module>
     </modules>
