Add yaml-io extension
Fixes #5178

--- a/integration-tests/main-yaml/src/main/resources/application.properties
+++ b/integration-tests/main-yaml/src/main/resources/application.properties
@@ -19,3 +19,4 @@
 # Main
 #
 camel.main.routes-include-pattern = routes/my-routes.yaml,routes/my-rests.yaml,routes/my-templates.yaml
+camel.main.dump-routes = yaml
