Use defined images for dev services in tests

--- a/integration-tests/quartz-clustered/src/main/resources/application.properties
+++ b/integration-tests/quartz-clustered/src/main/resources/application.properties
@@ -28,6 +28,7 @@ quarkus.quartz.cluster-checkin-interval=100
 # Quartz persistent job store
 quarkus.datasource.devservices.enabled = true
 quarkus.datasource.db-kind = postgresql
+quarkus.datasource.devservices.image-name = ${postgres.container.image}
 
 # Flyway to create Quartz tables
 quarkus.flyway.connect-retries = 10
