Upgrade Quarkus to 3.4.0.CR1

--- a/extensions/knative/deployment/pom.xml
+++ b/extensions/knative/deployment/pom.xml
@@ -46,6 +46,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-vertx-http-deployment</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-virtual-threads-deployment</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
