--- a/extensions/knative/runtime/pom.xml
+++ b/extensions/knative/runtime/pom.xml
@@ -56,6 +56,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-vertx-http</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-virtual-threads</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
