Use quarkus.scheduler.start-mode instead of deprecated quarkus.quartz variant

--- a/extensions/quartz/deployment/src/test/resources/application-configuration-quarkus-scheduler-not-autowired.properties
+++ b/extensions/quartz/deployment/src/test/resources/application-configuration-quarkus-scheduler-not-autowired.properties
@@ -15,4 +15,4 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 camel.component.quartz.autowired-enabled = false
-quarkus.quartz.start-mode=forced
+quarkus.scheduler.start-mode=forced
