--- a/integration-tests/quartz-clustered/src/main/resources/application.properties
+++ b/integration-tests/quartz-clustered/src/main/resources/application.properties
@@ -22,7 +22,7 @@ quarkus.log.file.rotation.rotate-on-boot = false
 quarkus.quartz.clustered = true
 quarkus.quartz.store-type = jdbc-cmt
 # Must force start since we do not supply any @Scheduled annotated methods
-quarkus.quartz.start-mode = forced
+quarkus.scheduler.start-mode = forced
 quarkus.quartz.cluster-checkin-interval=100
 
 # Quartz persistent job store
