Micrometer: Router policy should be disabled by default (to be consistent with Camel) #5028

--- a/integration-tests/micrometer/src/main/resources/application.properties
+++ b/integration-tests/micrometer/src/main/resources/application.properties
@@ -20,3 +20,5 @@ camel.context.name = quarkus-camel-micrometer
 quarkus.camel.metrics.enable-message-history = true
 
 quarkus.camel.metrics.enable-instrumented-thread-pool-factory = true
+
+quarkus.camel.metrics.enable-route-policy = true
