Exclude com.google.auto.value:auto-value-annotations from gRPC and Google Pubsub extensions
Fixes #5258

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -1131,6 +1131,10 @@
                         <artifactId>annotations</artifactId>
                     </exclusion>
                     <exclusion>
+                        <groupId>com.google.auto.value</groupId>
+                        <artifactId>auto-value-annotations</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>commons-logging</groupId>
                         <artifactId>commons-logging</artifactId>
                     </exclusion>
@@ -1244,6 +1248,10 @@
                     <exclusion>
                         <groupId>com.google.android</groupId>
                         <artifactId>annotations</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.google.auto.value</groupId>
+                        <artifactId>auto-value-annotations</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>commons-logging</groupId>
