Revert "Disable infinispan tests"
This reverts commit de45fab0ec6926d3700afcbc8110a54a97f5e70d.

--- a/tooling/scripts/test-categories.yaml
+++ b/tooling/scripts/test-categories.yaml
@@ -22,6 +22,8 @@ group-01:
   - google-storage
   - hazelcast
   - http-grouped
+  - infinispan
+  - infinispan-quarkus-client
   - jcache
   - jms-artemis-client
   - jms-ibmmq-client
