--- a/extensions/optaplanner/deployment/pom.xml
+++ b/extensions/optaplanner/deployment/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.optaplanner</groupId>
             <artifactId>optaplanner-quarkus-jackson-deployment</artifactId>
         </dependency>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5277 -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-vertx-http-dev-console-spi</artifactId>
+          </dependency>
     </dependencies>
 
     <build>
