Telegram integration tests: add the possibility to disable running webhook test Fixes #5298

--- a/integration-tests/telegram/src/main/resources/application.properties
+++ b/integration-tests/telegram/src/main/resources/application.properties
@@ -34,3 +34,4 @@ telegram.chatId=${TELEGRAM_CHAT_ID:1426416050}
 #for webhook Telegram consumer
 webhook-external-url=${TELEGRAM_WEBHOOK_EXTERNAL_URL:https://my-external-link}
 webhook-authorization-token=${TELEGRAM_WEBHOOK_AUTHORIZATION_TOKEN:fake-token}
+webhook.disabled=${TELEGRAM_WEBHOOK_DISABLED:false}
